examples/test/testpolicy19876.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19876
  namespace: namespace316
spec:
  podSelector:
    matchLabels:
      key35: value23
      key33: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value16
      podSelector:
        matchLabels:
          key14: value45
          key37: value24
          key25: value2
